<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mnu_config"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/mnu_config"
        app:showAsAction="never"/>
    <item android:id="@+id/mnu_siguiente"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/mnu_next"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/mnu_cambiar_cuenta"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/mnu_cambiar_cuenta"
        app:showAsAction="never"/>
    <item android:id="@+id/mnu_cambiar_calendario"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/mnu_cambiar_calendario"
        app:showAsAction="never"/>
    <item android:id="@+id/mnu_borrar_preferencias"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/mnu_borrar_preferencias"
        app:showAsAction="never"/>

</menu>